@@ -160,6 +160,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #28740: Add sys.getandroidapilevel(): return the build time API version
+  of Android as an integer. Function only available on Android.
+
 - Issue #26273: Add new :data:`socket.TCP_CONGESTION` (Linux 2.6.13) and
   :data:`socket.TCP_USER_TIMEOUT` (Linux 2.6.37) constants. Patch written by
   Omar Sandoval.
